force-app/main/default/objects/Performance_Metric__c/Performance_Metric__c.object-meta.xml
<CustomObject>
    <label>Performance Metric</label>
    <nameField>
        <displayFormat>PM-{0}</displayFormat>
        <label>Performance Metric Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Metrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>