force-app/main/default/objects/Performance_Metric__c/fields/ApprovalNumberS__c.field-meta.xml
<CustomField>
    <fullName>ApprovalNumberS__c</fullName>
    <label>Approval number(s)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>