force-app/main/default/objects/Performance_Metric__c/fields/Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Award</label>
    <referenceTo>Funding_Award__c</referenceTo>
    <relationshipLabel>Performance Metrices</relationshipLabel>
    <relationshipName>Performance_Metrices</relationshipName>
    <type>Lookup</type>
</CustomField>