force-app/main/default/objects/Performance_Metric__c/fields/GuaranteedPoliticalSubdivision__c.field-meta.xml
<CustomField>
    <fullName>GuaranteedPoliticalSubdivision__c</fullName>
    <label>Guaranteed Political Subdivision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abbeville</fullName>
            </value>
            <value>
                <fullName>Aiken</fullName>
            </value>
            <value>
                <fullName>Allendale</fullName>
            </value>
            <value>
                <fullName>Anderson</fullName>
            </value>
            <value>
                <fullName>Bamberg</fullName>
            </value>
            <value>
                <fullName>Barnwell</fullName>
            </value>
            <value>
                <fullName>Beaufort</fullName>
            </value>
            <value>
                <fullName>Berkeley</fullName>
            </value>
            <value>
                <fullName>Bluffton Town</fullName>
            </value>
            <value>
                <fullName>Calhoun</fullName>
            </value>
            <value>
                <fullName>Cayce</fullName>
            </value>
            <value>
                <fullName>Charleston</fullName>
            </value>
            <value>
                <fullName>Cherokee</fullName>
            </value>
            <value>
                <fullName>Chester</fullName>
            </value>
            <value>
                <fullName>Chesterfield</fullName>
            </value>
            <value>
                <fullName>Clarendon</fullName>
            </value>
            <value>
                <fullName>Clemson</fullName>
            </value>
            <value>
                <fullName>Colleton</fullName>
            </value>
            <value>
                <fullName>Columbia</fullName>
            </value>
            <value>
                <fullName>Conway</fullName>
            </value>
            <value>
                <fullName>Darlington</fullName>
            </value>
            <value>
                <fullName>Dillon</fullName>
            </value>
            <value>
                <fullName>Dorchester</fullName>
            </value>
            <value>
                <fullName>Easley</fullName>
            </value>
            <value>
                <fullName>Edgefield</fullName>
            </value>
            <value>
                <fullName>Fairfield</fullName>
            </value>
            <value>
                <fullName>Florence</fullName>
            </value>
            <value>
                <fullName>Forest Acres</fullName>
            </value>
            <value>
                <fullName>Fort Mill Town</fullName>
            </value>
            <value>
                <fullName>Fountain Inn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>