force-app/main/default/objects/Performance_Metric__c/fields/NameOfPersonCompletingForm__c.field-meta.xml
<CustomField>
    <fullName>NameOfPersonCompletingForm__c</fullName>
    <label>Name of person completing form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>