force-app/main/default/objects/Performance_Metric__c/fields/PartnerAgency__c.field-meta.xml
<CustomField>
    <fullName>PartnerAgency__c</fullName>
    <label>Partner Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>